syntax = "proto3";

option java_package = "com.tustar.weather";
option java_multiple_files = true;

message WLocation {
    string id = 1;
    string lon = 2;
    string lat = 3;
    string name = 4;
    bool auto = 5;
    string adm1 = 6;
    string adm2 = 7;
}

message WeatherPrefs {
    Mode mode_24h = 1;
    Mode mode_15d = 2;
    int64 last_updated = 3;
    WLocation locate = 4;
    map<string, WLocation> cities = 5; // repeated => list

    enum Mode {
        LIST = 0;
        TREND = 1;
    }
}